[package]
name = "rust-hyper"
version = "0.1.0"
authors = ["Max Seiden <140dbs@gmail.com>"]

[dependencies]
config = "0.9"
http = "0.1"
hyper = "0.12"
lazy_static = "1.1"
serde = "1.0"
serde_derive = "1.0"
slog = { version = "2", features = ["max_level_trace"] }
slog-async = "2"
slog-envlogger = "2"
slog-scope = "4"
slog-stdlog = "3"
slog-term = "2"
url = "1.7"
